--- a/docker-compose.coolify.yml
+++ b/docker-compose.coolify.yml
@@ -1,5 +1,4 @@
 # //INFO: Specialized compose for Coolify production
-# //NOTE: Scaling (replicas) should be managed via Coolify dashboard
 services:
   naira-scraper:
     build: .
@@ -7,6 +6,13 @@ services:
       - nairaland_data:/app/data
     environment:
       - PYTHONUNBUFFERED=1
+    networks:
+      - coolify
 
 volumes:
   nairaland_data:
+
+
+networks:
+  coolify:
+    external: true
