--- a/docker-compose.coolify.yml
+++ b/docker-compose.coolify.yml
@@ -17,9 +17,14 @@ services:
   naira-scraper-3:
     <<: *scraper_node
 
+  naira-scraper-4:
+    <<: *scraper_node
+
+  naira-scraper-5:
+    <<: *scraper_node
+
 volumes:
   nairaland_data:
-
 
 networks:
   coolify:
